--- a/docroot/sites/all/themes/govcon/sass/base/_tables.scss
+++ b/docroot/sites/all/themes/govcon/sass/base/_tables.scss
@@ -5,7 +5,6 @@ table {
 	th {
 		background: lighten($gold,20%);
 		padding: 0.5em;
-		width:99%
 	}
 	tr {
 		width: 99%;
