--- a/docroot/sites/all/themes/govcon/sass/components/_admin.scss
+++ b/docroot/sites/all/themes/govcon/sass/components/_admin.scss
@@ -4,3 +4,6 @@
 .messages.warning {
 	border-color: $red;
 }
+
+/* Admin tables */
+td.status { width: 24px; }
